--- a/acceso.html
+++ b/acceso.html
@@ -22,7 +22,7 @@
     // Configuración de Firebase
     const firebaseConfig = {
       apiKey: "AIzaSyAe3LW9dme23o1AGXqg4WkJ0-hrqRxx8h4",
-      authDomain: "uandina.edu.pe",
+      authDomain: "reservas-incuba.firebaseapp.com",
       projectId: "reservas-incuba",
       storageBucket: "reservas-incuba.appspot.com",
       messagingSenderId: "321837960358",
