--- a/acceso.html
+++ b/acceso.html
@@ -66,10 +66,12 @@
           }
         } else { 
           // Si el correo no está registrado, redirigir al login
-          Swal.fire({ icon: 'error', title: '¡Error!', text: 'Este correo no está registrado como docente o participante.', confirmButtonText: 'Aceptar' }).then(() => window.location.href = "index.html"); }
+          alert("Este correo no está registrado como docente o participante.");
+          //Swal.fire({ icon: 'error', title: '¡Error!', text: 'Este correo no está registrado como docente o participante.', confirmButtonText: 'Aceptar' }).then(() => window.location.href = "index.html"); }
         }
       } else {
         // Si no está autenticado, redirigir al login
+        alert("Este correo no está registrado.");
         Swal.fire({ icon: 'error', title: '¡Error!', text: 'Este correo no está registrado.', confirmButtonText: 'Aceptar' }).then(() => window.location.href = "index.html"); }
       }
     });
