--- a/horarios_docentes.html
+++ b/horarios_docentes.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
-  <!--script src="authCheck.js"></script-->
+  <script src="authCheck.js"></script>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
