--- a/acceso.html
+++ b/acceso.html
@@ -35,7 +35,7 @@
 
     // Lista de usuarios con roles manuales
     const userRoles = {
-      '018201307h@uandina.edu.pe': 'docente', // Usuario docente
+      //'018201307h@uandina.edu.pe': 'docente', // Usuario docente
       'rhumpire@uandina.edu.pe': 'docente', // Otro usuario docente
       'davilad@uandina.edu.pe': 'docente', // Otro usuario docente
       'participante@uandina.edu.pe': 'participante', // Usuario participante
