--- a/acceso.html
+++ b/acceso.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles1.css" />
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
-  <!--script src="authCheck.js"></script-->
+  <script src="authCheck.js"></script>
 </head>
 <body>
   <div id="app">
