--- a/acceso.html
+++ b/acceso.html
@@ -67,14 +67,20 @@
         } else { 
           // Si el correo no está registrado, redirigir al login
           //alert("Este correo no está registrado como docente o participante.");
-          Swal.fire('Este correo no está registrado como docente o participante.', error.message, 'error')
-          window.location.href = "index.html"
+          //Swal.fire('Este correo no está registrado como docente o participante.', error.message, 'error')
+          Swal.fire('Este correo no está registrado.', '', 'error').then(() => {
+          window.location.href = "index.html";
+          });
+          //window.location.href = "index.html"
         }
       } else {
         // Si no está autenticado, redirigir al login
         //alert("Este correo no está registrado.");
-        Swal.fire('Este correo no está registrado.', error.message, 'error')
-        window.location.href = "index.html"
+        //Swal.fire('Este correo no está registrado.', error.message, 'error')
+        Swal.fire('Este correo no está registrado.', '', 'error').then(() => {
+        window.location.href = "index.html";
+        });
+        //window.location.href = "index.html"
       }
     });
   </script>
