--- a/acceso.html
+++ b/acceso.html
@@ -8,7 +8,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="authCheck.js"></script>
+  <!--script src="authCheck.js"></script-->
 </head>
 <body>
   <div id="app">
