--- a/horarios_docentes.html
+++ b/horarios_docentes.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Panel Docente - Incuba Andina Lab</title>
+  <h1>Bienvenido, <span id="userName"></span></h1>
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
