--- a/horarios_docentes.html
+++ b/horarios_docentes.html
@@ -2,13 +2,13 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Panel Docente - Incuba Andina Lab</title>
-  <h1>Bienvenido, <span id="userName"></span></h1>
+  <title>Panel Docente - Incuba Andina Lab<br>
+  Bienvenido, <span id="userName"></span></title>
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
-  <script src="authCheck.js"></script>
+  <!--script src="authCheck.js"></script-->
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
