--- a/horarios_docentes.html
+++ b/horarios_docentes.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>hla, <span id="userName"></span></title>
+  <title>Panel Docente - Gestión de Horarios</title>
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
@@ -33,7 +33,8 @@
 </head>
 <body>
   <header>
-    <h1>Panel Docente - Gestión de Horarios</h1>
+    <h1>Panel Docente - Gestión de Horarios<br>
+    Bienvenido, <span id="userName"></span></h1>
   </header>
   <div id="calendar"></div>
 
