--- a/horarios_docentes.html
+++ b/horarios_docentes.html
@@ -35,6 +35,9 @@
   <header>
     <h1>Panel Docente - Gestión de Horarios<br>
     Bienvenido, <span id="userName"></span></h1>
+    <h1>Panel Docente - Gestión de Horarios<br>
+    Bienvenido, <span id="userName"></span></h1>
+    <button id="logoutBtn" style="margin-top: 10px; background: white; color: #4e54c8; padding: 8px 16px; border: none; border-radius: 8px; cursor: pointer;">Cerrar sesión</button>
   </header>
   <div id="calendar"></div>
 
@@ -75,8 +78,24 @@
         },
         events: eventos
       });
-
+      firebase.auth().onAuthStateChanged(user => {
+      if (user) {
+        // Mostrar nombre si está disponible, si no, el correo
+        document.getElementById("userName").textContent = user.displayName;
+      } else {
+        // Si no hay usuario logeado, redirigir al login
+        window.location.href = "login.html";
+      }
+      });
       calendar.render();
+      document.getElementById("logoutBtn").addEventListener("click", () => {
+      firebase.auth().signOut().then(() => {
+        window.location.href = "login.html";
+      }).catch((error) => {
+        console.error("Error al cerrar sesión:", error);
+        Swal.fire('Error', 'No se pudo cerrar sesión.', 'error');
+      });
+    });
     });
   </script>
 </body>
