--- a/horarios_docentes.html
+++ b/horarios_docentes.html
@@ -95,7 +95,7 @@
           document.getElementById("userName").textContent = user.displayName;
         } else {
           // Si no hay usuario logeado, redirigir al login
-          window.location.href = "login.html";
+          window.location.href = "index.html";
         }
       });
       calendar.render();
