--- a/horarios_docentes.html
+++ b/horarios_docentes.html
@@ -5,8 +5,7 @@
   <title>Panel Docente - Gestión de Horarios</title>
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
+ 
   <script src="authCheck.js"></script>
   <style>
     body {
@@ -35,7 +34,7 @@
   <header>
     <h1>Panel Docente - Gestión de Horarios<br>
     Bienvenido, <span id="userName"></span></h1>
-    <button id="logoutBtn" style="margin-top: 10px; background: white; color: #4e54c8; padding: 8px 16px; border: none; border-radius: 8px; cursor: pointer;">Cerrar sesión</button>
+    <button id="logoutBtn">Cerrar sesión</button>
   </header>
   <div id="calendar"></div>
 
