--- a/horarios_participantes.html
+++ b/horarios_participantes.html
@@ -8,34 +8,12 @@
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
   <script src="authCheck.js"></script>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #f5f5f5;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background: #8f94fb;
-      color: white;
-      padding: 1rem;
-      text-align: center;
-    }
-    #calendar {
-      max-width: 1000px;
-      margin: 40px auto;
-      background: white;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 16px rgba(0,0,0,0.1);
-    }
-  </style>
 </head>
 <body>
   <header>
     <h1>Reserva de Reuniones</h1>
     Bienvenido, <span id="userName"></span></h1>
-    <button id="logoutBtn" style="margin-top: 10px; background: white; color: #4e54c8; padding: 8px 16px; border: none; border-radius: 8px; cursor: pointer;">Cerrar sesión</button>
+    <button id="logoutBtn">Cerrar sesión</button>
   </header>
   <div id="calendar"></div>
 
