--- a/horarios_participantes.html
+++ b/horarios_participantes.html
@@ -10,11 +10,11 @@
   <script src="authCheck.js"></script>
 </head>
 <body>
-  <header>
+  <header1>
     <h1>Reserva de Reuniones</h1>
     Bienvenido, <span id="userName"></span></h1>
     <button id="logoutBtn">Cerrar sesión</button>
-  </header>
+  </header1>
   <div id="calendar"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
