--- a/horarios_docentes.html
+++ b/horarios_docentes.html
@@ -9,11 +9,11 @@
   <script src="authCheck.js"></script>
 </head>
 <body>
-  <header>
+  <header1>
     <h1>Panel Docente - Gestión de Horarios<br>
     Bienvenido, <span id="userName"></span></h1>
     <button id="logoutBtn">Cerrar sesión</button>
-  </header>
+  </header1>
   <div id="calendar"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
