--- a/horarios_docentes.html
+++ b/horarios_docentes.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Panel Docente - Gestión de Horarios</title>
+  <link rel="stylesheet" href="css/styles.css" />
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
  
