--- a/horarios_participantes.html
+++ b/horarios_participantes.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Reserva de Horarios - Incuba Andina Lab</title>
+  <link rel="stylesheet" href="css/styles.css" />
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
