--- a/horarios_participantes.html
+++ b/horarios_participantes.html
@@ -11,11 +11,16 @@
   <script src="authCheck.js"></script>
 </head>
 <body>
-  <header2>
+  <header>
+    <style>
+      header{
+      background: #8f94fb;
+      }
+    </style>
     <h1>Reserva de Reuniones</h1>
     Bienvenido, <span id="userName"></span></h1>
     <button id="logoutBtn">Cerrar sesión</button>
-  </header2>
+  </header>
   <div id="calendar"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
