--- a/acceso.html
+++ b/acceso.html
@@ -17,67 +17,57 @@
   </div>
 
   <script type="module">
-    import { getAuth } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js";
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
+  import { getAuth } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js";
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
 
-    // Configuración de Firebase
-    const firebaseConfig = {
-      apiKey: "AIzaSyAe3LW9dme23o1AGXqg4WkJ0-hrqRxx8h4",
-      authDomain: "reservas-incuba.firebaseapp.com",
-      projectId: "reservas-incuba",
-      storageBucket: "reservas-incuba.appspot.com",
-      messagingSenderId: "321837960358",
-      appId: "1:321837960358:web:65127a59a8aa4aae0d7867",
-      measurementId: "G-ERQ0CQWYWG"
-    };
+  const firebaseConfig = {
+    apiKey: "AIzaSyAe3LW9dme23o1AGXqg4WkJ0-hrqRxx8h4",
+    authDomain: "reservas-incuba.firebaseapp.com",
+    projectId: "reservas-incuba",
+    storageBucket: "reservas-incuba.appspot.com",
+    messagingSenderId: "321837960358",
+    appId: "1:321837960358:web:65127a59a8aa4aae0d7867",
+    measurementId: "G-ERQ0CQWYWG"
+  };
 
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
 
-    // Lista de usuarios con roles manuales
-    const userRoles = {
-      '018201307h@uandina.edu.pe': 'docente', // Usuario docente
-      'rhumpire@uandina.edu.pe': 'docente', // Otro usuario docente
-      'davilad@uandina.edu.pe': 'docente', // Otro usuario docente
-      'participante@uandina.edu.pe': 'participante', // Usuario participante
-      'otrodocente@uandina.edu.pe': 'participante', // Otro usuario docente
-      // Agrega más usuarios aquí
-    };
+  const userRoles = {
+    '018201307h@uandina.edu.pe': 'docente',
+    'rhumpire@uandina.edu.pe': 'docente',
+    'davilad@uandina.edu.pe': 'docente',
+    'participante@uandina.edu.pe': 'participante',
+    'otrodocente@uandina.edu.pe': 'participante'
+  };
 
-    // Verificar el estado de autenticación
-    auth.onAuthStateChanged((user) => {
-      if (user) {
-        // Mostrar nombre del usuario en la página
-        document.getElementById('userName').textContent = user.displayName;
+  auth.onAuthStateChanged((user) => {
+    if (user) {
+      const userEmail = user.email;
+      document.getElementById('userName').textContent = user.displayName || userEmail;
 
-        // Obtener el correo electrónico del usuario
-        const userEmail = user.email;
+      if (userRoles[userEmail]) {
+        const userRole = userRoles[userEmail];
 
-        // Verificar si el correo está en la lista de roles
-        if (userRoles[userEmail]) {
-          const userRole = userRoles[userEmail];
+        // Guardar tipo de usuario para authCheck.js
+        localStorage.setItem('tipoUsuario', userRole);
 
-          // Redirigir según el rol
-          if (userRole === 'docente') {
-            // Redirigir a la página de administración de horarios para docentes
-            window.location.href = "horarios_docentes.html"; // Página para administrar horarios
-          } else if (userRole === 'participante') {
-            // Redirigir a la página de registro de horarios para participantes
-            window.location.href = "horarios_participantes.html"; // Página para registrar horarios
-          }
-        } else { 
-          // Si el correo no está registrado, redirigir al login
-          Swal.fire('Este correo no está registrado.', '', 'error').then(() => {
-          window.location.href = "index.html";
-          });
+        if (userRole === 'docente') {
+          window.location.href = "horarios_docentes.html";
+        } else if (userRole === 'participante') {
+          window.location.href = "horarios_participantes.html";
         }
       } else {
-        // Si no está autenticado, redirigir al login
         Swal.fire('Este correo no está registrado.', '', 'error').then(() => {
-        window.location.href = "index.html";
+          window.location.href = "index.html";
         });
       }
-    });
-  </script>
+    } else {
+      Swal.fire('Debes iniciar sesión.', '', 'warning').then(() => {
+        window.location.href = "index.html";
+      });
+    }
+  });
+</script>
 </body>
 </html>
