--- a/horarios_docentes.html
+++ b/horarios_docentes.html
@@ -20,7 +20,7 @@
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
   
   <!-- Validación de autenticación -->
-  <script type="module" src="authCheck.js"></script>
+  <!--script type="module" src="authCheck.js"></script-->
 
   <!-- Script principal del calendario -->
   <script type="module">
