--- a/acceso.html
+++ b/acceso.html
@@ -31,7 +31,7 @@
     const auth = getAuth(app);
 
     const userRoles = {
-      '018201307h@uandina.edu.pe': 'docente',
+      '018201307h@uandina.edu.pe': 'participante',
       'rhumpire@uandina.edu.pe': 'docente',
       'davilad@uandina.edu.pe': 'docente',
       'participante@uandina.edu.pe': 'participante',
