--- a/horarios_docentes.html
+++ b/horarios_docentes.html
@@ -37,7 +37,7 @@
           document.getElementById("userName").textContent = user.displayName || userEmail;
 
           // Cargar el JSON con los enlaces personales
-          fetch("json/links_usuarios.json")
+          fetch("json/carpetas_personales.json")
             .then(response => response.json())
             .then(data => {
               const usuario = data.find(u => u.email === userEmail);
@@ -48,7 +48,7 @@
               }
             })
             .catch(error => {
-              console.error("Error al cargar links_usuarios.json:", error);
+              console.error("Error al cargar carpetas_personales.json:", error);
             });
         }
       });
