--- a/horarios_docentes.html
+++ b/horarios_docentes.html
@@ -104,4 +104,15 @@
   <div>
     <button id="logoutBtn">Cerrar sesión</button>
   </div>
+  <footer class="footer">
+      <div>
+        <button id="logoutBtn">Cerrar sesión</button>
+      </div>
+        <div class="container text-center">
+            <p 
+                class="text-muted">Dirección de Innovación y Emprendimiento
+                <a href="https://sites.google.com/uandina.edu.pe/innovacion-emprendimiento/inicio">VRIN-DIyE</a>
+            </p>
+        </div>
+    </footer>
 </html>
