--- a/horarios_docentes.html
+++ b/horarios_docentes.html
@@ -110,9 +110,12 @@
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/Escudo_UAC.svg/1200px-Escudo_UAC.svg.png" alt="Logo UAC" class="footer-logo">
     <div>© 2025 Universidad Andina del Cusco - Incuba Andina Lab. Todos los derechos reservados.</div>
     <div class="social-icons">
-      <a href="https://www.facebook.com/uandinaoficial" target="_blank"><i class="fab fa-facebook"></i></a>
-      <a href="https://www.instagram.com/uandinaoficial/" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://www.youtube.com/@UniversidadAndinaDelCusco" target="_blank"><i class="fab fa-youtube"></i></a>
+      <a href="https://www.facebook.com/people/Incuba-Andina-Lab/61553052163921/" target="_blank"><i class="fab fa-facebook"></i></a>
+      <a href="https://www.instagram.com/incuba_andina_lab/" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.youtube.com/@IncubaAndinaLab" target="_blank"><i class="fab fa-youtube"></i></a>
+      <a href="https://sites.google.com/uandina.edu.pe/incubalab" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/Google_Sites_logo.png" alt="Google Sites" class="footer-logo">
+        </a>
     </div>
   </footer>
 </body>
