--- a/horarios_docentes.html
+++ b/horarios_docentes.html
@@ -105,7 +105,7 @@
     });
   </script>
   <footer>
-    <img src="images/LOGO Uandina blanco.png" alt="Logo UAC" class="footer-logo">
+    <img src="images/LOGO Uandina blanco2.png" alt="Logo UAC" class="footer-logo">
     <div>© 2025 Universidad Andina del Cusco - Incuba Andina Lab. Todos los derechos reservados.</div>
     <div class="social-icons">
       <a href="https://www.facebook.com/people/Incuba-Andina-Lab/61553052163921/" target="_blank"><i class="fab fa-facebook"></i></a>
