--- a/horarios_docentes.html
+++ b/horarios_docentes.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <a href="https://sites.google.com/uandina.edu.pe/incubalab" target="_blank"><img src="images/incuba.png" alt="Logo Incuba Andina" id="logo-header"></a>
+    <a href="https://sites.google.com/uandina.edu.pe/incubalab" target="_blank"><img src="images/Logo incuba blanco.png" alt="Logo Incuba Andina" id="logo-header"></a>
     <h2>Panel Docente - Gestión de Horarios<br>
     Bienvenido, <span id="userName"></span></h2>
     <div id="userFolderLink"></div>
