--- a/horarios_docentes.html
+++ b/horarios_docentes.html
@@ -9,12 +9,20 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-  <header>
-    <a href="https://sites.google.com/uandina.edu.pe/incubalab" target="_blank"><img src="images/Logo incuba blanco.png" alt="Logo Incuba Andina" id="logo-header"></a>
-    <h2>Panel Docente - Gestión de Horarios<br>
-    Bienvenido, <span id="userName"></span></h2>
-    <div id="userFolderLink"></div>
-  </header>
+ <header>
+  <div class="header-content">
+    <a href="https://sites.google.com/uandina.edu.pe/incubalab" target="_blank">
+      <img src="images/Logo incuba blanco.png" alt="Logo Incuba Andina" id="logo-header">
+    </a>
+    <div class="header-text">
+      <h2>
+        Panel Docente - Gestión de Horarios<br>
+        Bienvenido, <span id="userName"></span>
+      </h2>
+      <div id="userFolderLink"></div>
+    </div>
+  </div>
+</header>
 
   <div id="calendar"></div>
 
